--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,7 @@
                 code: 'CH',
                 tld: '.ch',
                 region: 'western-europe',
-                color: 'WHITE',
+                color: 'ORANGE',
                 textColor: 'black',
                 coordinates: [46.8182, 8.2275],
                 plates: [
